# rothberg-run

./: .gitignore  LICENSE  README.md
build0401/: CMakeCache.txt  cmake_install.cmake
build0401/3d-construction/: cmake_install.cmake
build0401/3d-construction/Project.build/Debug/3d-construction.build/: dgph
build0401/3d-construction/Project.build/Debug/draw-player.build/: dgph
build0401/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
build0401/Project.build/Debug/ALL_BUILD.build/: Script-FA5A96A5F90D40159B63FD68.sh  dgph
build0401/Project.build/Debug/ZERO_CHECK.build/: Script-5E4FD8089B44491796BE2D49.sh  dgph  dgph~
build0401/Project.xcodeproj/: project.pbxproj
build0401/Project.xcodeproj/project.xcworkspace/xcuserdata/jingzhao.xcuserdatad/: UserInterfaceState.xcuserstate
build0401/Project.xcodeproj/xcuserdata/jingzhao.xcuserdatad/xcschemes/: xcschememanagement.plist
build0401/camera/: cmake_install.cmake
build0401/camera/Project.build/Debug/Camera.build/: dgph
build0401/game-player/: cmake_install.cmake
build0401/game-player/Project.build/Debug/game-player-test.build/: dgph  dgph~
build0401/game-player/Project.build/Debug/game-player.build/: dgph  dgph~
build0401/map-generation/: cmake_install.cmake
build0401/map-generation/Project.build/Debug/Map.build/: dgph
build0401/public/src/: cmake_install.cmake
build0401/public/src/FM7/: cmake_install.cmake
build0401/public/src/opencv/: cmake_install.cmake
src/: CMakeLists.txt
src/3d-construction/: CMakeLists.txt  Circle.stl  DrawingRoad.cpp  DrawingRoad.h  DrawingRoadTest.cpp  binstlTree.cpp  binstlTree.h  cartoonboy.stl  cartoonboy1.stl  drawPlayer.cpp  drawPlayer.h  fence1.stl  fence2.stl  main.cpp
src/camera/: CMakeLists.txt  Camera.cpp  Camera.h  CameraTest.cpp
src/coins/: CMakeLists.txt  Coins.cpp  Coins.h
src/data/: TreeSTL.stl  obstacle.stl
src/game-player/: CMakeLists.txt  binstl.cpp  binstl.h  game-player-test.cpp  game-player.cpp  game-player.h
src/map-generation/: CMakeLists.txt  Map.cpp  Map.h  MapTest.cpp  Road.cpp  Road.h
src/obstacle/: CMakeLists.txt  Obstacle.cpp  Obstacle.h
(+361 files in other folders)
